# Experiment262

./: .cproject  sdkconfig  tool_set_config.json
Mechanics/: StructureV2Laser.ipt  StructureV2_top_laser_left.ipt  StructureV2_top_laser_right.ipt
Mechanics/GearsSet2/: EncoderGear_1_5.ipt  MotorGear_1_5.ipt  MotorGear_1_5_MIR.ipt  WheelGear_1_5.ipt  WheelGear_1_5_MIR.ipt
Software/: .project  gdbstub_debug_launch.launch  sdkconfig.old  tool_set_config.json
Software/.metadata/: version.ini
Software/.metadata/.plugins/org.eclipse.cdt.core/: experiment626.1739488766289.pdom
Software/.metadata/.plugins/org.eclipse.cdt.core/infoCache/experiment626/: default.json
Software/.metadata/.plugins/org.eclipse.core.resources/: 0.snap
Software/.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
Software/.metadata/.plugins/org.eclipse.core.resources/.projects/experiment626/: .location
Software/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Software/.metadata/.plugins/org.eclipse.debug.core/.launches/: experiment626.launch
Software/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Software/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Software/main/: CMakeLists.txt  main.cpp
Software/main/adc/: adc.cpp  adc.h
Software/main/dshot/: dshot.cpp
Software/main/encoder/: encoder.cpp  encoder.h
Software/main/gpio/: gpio_config.cpp
main/: main.cpp
main/adc/: adc.h
main/dshot/: dshot.h
main/gpio/: gpio_config.h
(+7 files in other folders)
